--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ gen/
 
 # Gradle files
 .gradle/
+.gradle
 build/
 /*/build/
 
@@ -25,3 +26,11 @@ proguard/
 
 # Log Files
 *.log
+
+# Android Studio
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+
