Added Allowances screen, still in dev

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.thebangias.familybudgetclient" >
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-
     <!-- to access the internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +9,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
@@ -26,9 +21,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/AppTheme"
-            android:name=".activities.HomeActivity"
-            android:label="@string/title_activity_home" >
+            android:name=".activities.AllowancesActivity"
+            android:label="@string/title_activity_allowances">
         </activity>
     </application>
 
